--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <header>
 <body>
 	<div>Welcome!</div>
-	<a style="display:none">First part of the key - SW4gdGhpcyBtb250aCdzIE1TIEJ1aWxkIG1lZXRpbmcgd2UnbGwg</a>
+	<a style="display:none">First part of the key - Q2FyZWVyIE</a>
 </body>
 </html>
